--- a/collage-editor.css
+++ b/collage-editor.css
@@ -72,24 +72,37 @@
   vertical-align: top;
   margin: 0.25em 0.5em;
   font-size: 0.95em;
+  width: 2em;
 }
 .h5p-collage-spacing-item,
 .h5p-collage-frame-item,
 .h5p-collage-heightRatio-item {
   float: left;
-  margin: 0.5em 2em 0 0;
+  margin: 1em 1em 0;
 }
-
+.h5p-collage-heightRatio-item {
+  margin-bottom: 1em;
+}
+.h5p-collage-frame-selector {
+  line-height: 1.25em;
+}
 .h5p-collage-editor .h5peditor-form {
   padding: 0;
   background-color: #e9e9e9;
 }
 .h5p-collage-template-item {
   padding: 0.5em 1em;
-} 
+}
 .h5p-collage-inner-wrapper,
 .h5p-collage-editor-layout-selector {
   padding: 0.5em;
   background-color: #fff;
   box-shadow: 0 0 0.25em #999 inset;
+}
+.h5p-collage-collage-item .h5peditor-label {
+  padding: 0.25em 1em 0;
+}
+.h5p-collage-collage-item .h5peditor-field-description {
+  font-size: 12px;
+  padding: 0.33em 1.34em 0;
 }
