--- a/collage-editor.css
+++ b/collage-editor.css
@@ -4,7 +4,7 @@
   top: 0.25em;
   left: 0.25em;
   background: rgba(0,0,0,0.7);
-  color: #f0f0f0;
+  color: #e0e0e0;
   padding: 0.25em 0.5em;
   outline: none;
   cursor: default;
@@ -12,7 +12,8 @@
 }
 .h5p-collage-change-image:hover,
 .h5p-collage-change-image:focus {
-  background: rgba(0,0,0,0.85);
+  background: rgba(0,0,0,0.9);
+  color: #f0f0f0;
 }
 .h5p-collage-change-image:active {
   color: #c0c0c0;
