--- a/collage-editor.css
+++ b/collage-editor.css
@@ -1,17 +1,72 @@
 .h5p-collage-wrapper {
   background-color: #fff;
 }
-.h5p-collage-change-image {
+.h5p-collage-empty:before {
+  background-image: none;
+}
+.h5p-collage [aria-label]:hover:before {
   font-size: 14px;
+  content: attr(aria-label);
   position: absolute;
-  top: 0.25em;
-  left: 0.25em;
+  line-height: 14px;
+  background-color: rgba(0,0,0,0.7);
+  padding: 4px 6px;
+  color: #e0e0e0;
+  top: 100%;
+  left: 0;
+  margin-top: 0.25em;
+  white-space: nowrap;
+  border-radius: 0.25em;
+}
+.h5p-collage-change-image,
+.h5p-collage-zoom-in,
+.h5p-collage-zoom-out {
+  font-size: 16px;
+  position: absolute;
   background: rgba(0,0,0,0.7);
   color: #e0e0e0;
-  padding: 0.25em 0.5em;
+  width: 1.625em;
+  height: 1.5em;
+  line-height: 1.5em;
   outline: none;
   cursor: pointer;
   border-radius: 0.25em;
+  top: 0.25em;
+  text-align: center;
+}
+.h5p-collage-change-image:after,
+.h5p-collage-zoom-out:after,
+.h5p-collage-zoom-in:after {
+  font-family: H5PFontAwesome4;
+  font-size: 14px;
+}
+.h5p-collage-zoom-in {
+  padding-top: 1px;
+  left: 4em;
+}
+.h5p-collage-zoom-in:after {
+  content: "\f067";
+}
+.h5p-collage-zoom-out {
+  padding-top: 1px;
+  left: 2.125em;
+}
+.h5p-collage-zoom-out:after {
+  content: "\f068";
+}
+.h5p-collage-empty .h5p-collage-zoom-in,
+.h5p-collage-loading .h5p-collage-zoom-in,
+.h5p-collage-empty .h5p-collage-zoom-out,
+.h5p-collage-loading .h5p-collage-zoom-out,
+.h5p-collage-loading .h5p-collage-change-image {
+  visibility: hidden;
+}
+.h5p-collage-change-image {
+  left: 0.25em;
+  padding-bottom: 1px;
+}
+.h5p-collage-change-image:after {
+  content: "\f0ad";
 }
 .h5p-collage-change-image:hover,
 .h5p-collage-change-image:focus {
@@ -20,6 +75,39 @@
 }
 .h5p-collage-change-image:active {
   color: #c0c0c0;
+}
+.h5p-collage-empty .h5p-collage-change-image {
+  width: 100%;
+  height: 100%;
+  color: #ddd;
+  cursor: pointer;
+  line-height: 1em;
+  background: transparent;
+  padding: 0;
+  top: 0;
+  left: 0;
+}
+.h5p-collage-empty .h5p-collage-change-image:after {
+  font-size: 4em;
+  content: "\f067";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.h5p-collage-empty .h5p-collage-change-image:hover:before {
+  left: 50%;
+  transform: translate(-50%, -100%);
+  margin-top: -0.25em;
+  background-color: transparent;
+  color: #afafaf;
+}
+.h5p-collage-empty .h5p-collage-change-image:hover,
+.h5p-collage-empty .h5p-collage-change-image:focus {
+  color: #afafaf;
+}
+.h5p-collage-empty .h5p-collage-change-image:active {
+  color: #668fbd;
 }
 .h5p-collage-image {
   user-select: none;
