Improved focus and panning.
Avoid bug where page jumps to top of image when it recieves focus.
Moved focus styling to editor.
Use window for mouse events, work outside of window!

--- a/collage-editor.css
+++ b/collage-editor.css
@@ -207,6 +207,19 @@
   -ms-user-select: none;
   user-select: none;
 }
+.h5p-collage-col:focus {
+  outline: none;
+}
+.h5p-collage-col:focus:after {
+  content: " ";
+  box-shadow: 0 0 1em #fff inset;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .h5p-collage-loading:after {
   content: "";
   position: absolute;
