Use separate wrapper for photos to avoid percentage issues with border. Use more accurate values to avoid px mistakes. Enabled resizing inside editor.

--- a/collage-editor.css
+++ b/collage-editor.css
@@ -208,10 +208,10 @@
   -ms-user-select: none;
   user-select: none;
 }
-.h5p-collage-col:focus {
+.h5p-collage-photo:focus {
   outline: none;
 }
-.h5p-collage-col:focus:after {
+.h5p-collage-photo:focus:after {
   content: " ";
   box-shadow: 0 0 1em #fff inset;
   pointer-events: none;
