--- a/collage-editor.css
+++ b/collage-editor.css
@@ -199,7 +199,7 @@
   background-color: #e9e9e9;
 }
 .h5p-collage-template-item {
-  padding: 0.5em 1em;
+  padding: 1em 1em 0.5em;
 }
 .h5p-collage-inner-wrapper,
 .h5p-collage-editor-layout-selector {
