--- a/collage-editor.css
+++ b/collage-editor.css
@@ -49,7 +49,8 @@
 }
 .h5p-collage-zoom-out[aria-disabled=true],
 .h5p-collage-zoom-in[aria-disabled=true] {
-  opacity: 0.6;
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 .h5p-collage-zoom-in {
   padding-top: 1px;
@@ -135,7 +136,7 @@
 .h5p-collage-empty .h5p-collage-change-image {
   width: 100%;
   height: 100%;
-  color: #ddd;
+  color: #6b6b6b;
   cursor: pointer;
   line-height: 1em;
   background: transparent;
@@ -151,20 +152,20 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
-.h5p-collage-empty .h5p-collage-change-image:hover:be fore {
+.h5p-collage-empty .h5p-collage-change-image:hover:before {
   left: 50%;
   top: 50%;
   transform: translate(-50%, 2.5em);
   margin-top: -0.25em;
   background-color: transparent;
-  color: #afafaf;
+  color: #4f4f4f;
 }
 .h5p-collage-empty .h5p-collage-change-image:hover,
 .h5p-collage-empty .h5p-collage-change-image:focus {
-  color: #afafaf;
+  color: #4f4f4f;
 }
 .h5p-collage-empty .h5p-collage-change-image:active {
-  color: #668fbd;
+  color: #3f3f3f;
 }
 .h5p-collage-image {
   user-select: none;
